<resources>
    <string name="app_name">Svs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_new">Nieuwe Factuur</string>
    <string name="button_resume">Terms and Conditions</string>
    <string name="image_title">Svs img </string>
    <string name="title_activity_factuur"> Factuur </string>
    <string name="title_activity_terms"> Terms </string>
    <string name="verhuiswagens">Verhuiswagen</string>
    <string name="verhuizer">Verhuizer(s)</string>
    <string name="verhuislift">Verhuislift</string>
    <string name="aanhanger">Aanhanger</string>
    <string name="kilometers">Kilometers</string>
    <string name="weekendtarief">Weekend tarief</string>
    <string name="bedragen">Bedrag</string>
    <string name="toeslag">Toeslag</string>
    <string name="btw">BTW</string>
    <string name="totaal">Totaal</string>
    <string name="btn_txt">Log in</string>
    <string name="manager">Manager only!</string>
    <string name="artikelen">Artikelen</string>
    <string name="addartikel">Fill in values to add artikel</string>
    <string-array name="verhuiswagen">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
</resources>