<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="4"
        android:id="@+id/tableLayout"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp">

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/tableHead">
        <TextView
            android:text="Code"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:text="Artikel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:text="Stuk prijs"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:text="Prijs"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/row1">
        <TextView
            android:id="@+id/code1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/artikel1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/stukprijs1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/prijs1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/row2">
        <TextView
            android:id="@+id/code2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/artikel2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/stukprijs2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/prijs2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/row3">
        <TextView
            android:id="@+id/code3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/artikel3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/stukprijs3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/prijs3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/row4">
        <TextView
            android:id="@+id/code4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/artikel4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/stukprijs4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/prijs4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:id="@+id/row5">
        <TextView
            android:id="@+id/code5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/artikel5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/stukprijs5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <TextView
            android:id="@+id/prijs5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </TableRow>

    </TableLayout>

    <TextView
        android:text="@string/bedragen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bedragen"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/tableLayout"
        android:layout_marginTop="40dp" />


    <TextView
        android:text="@string/toeslag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toeslag"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/bedragen"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/btw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btw"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/toeslag"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/totaal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totaal"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/btw"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="aa"
        android:textSize="20dp"
        android:id="@+id/subtotaalvalue"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tableLayout"
        android:layout_toRightOf="@id/bedragen"
         />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="aa"
        android:textSize="20dp"
        android:id="@+id/toeslagvalue"
        android:layout_alignTop="@+id/toeslag"
        android:layout_alignLeft="@+id/subtotaalvalue"
        android:layout_alignStart="@+id/subtotaalvalue"
        android:layout_alignRight="@+id/kilometersvalue"
        android:layout_alignEnd="@+id/kilometersvalue" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="aa"
        android:textSize="20dp"
        android:id="@+id/btwvalue"
        android:layout_alignTop="@+id/btw"
        android:layout_alignLeft="@+id/toeslagvalue"
        android:layout_alignStart="@+id/toeslagvalue"
        android:layout_alignRight="@+id/kilometersvalue"
        android:layout_alignEnd="@+id/kilometersvalue" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="aa"
        android:textSize="20dp"
        android:id="@+id/totaalvalue"
        android:layout_alignTop="@+id/totaal"
        android:layout_alignRight="@+id/kilometersvalue"
        android:layout_alignEnd="@+id/kilometersvalue"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/btwvalue"
        android:layout_alignStart="@+id/btwvalue" />

</RelativeLayout>